
syntax = "proto3";

package todo;
option go_package = "internal/proto/todo";

import "google/protobuf/empty.proto";

message TodoResponse {
  string id = 1;
  string title = 2;
  string description = 3;
}

message CreateTodoRequest {
    string title = 1;
    string description = 2;
}

message TodoId {
    string id = 1;
}

message ListTodoResponse {
    repeated TodoResponse todos = 1;
}

message BoolResponse {
    bool success = 1;
}

service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (TodoResponse);
    rpc UpdateTodo (TodoId) returns (BoolResponse);
    rpc DeleteTodo (TodoId) returns (BoolResponse);
    rpc ListTodos (google.protobuf.Empty) returns (ListTodoResponse);
}